--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -1,7 +1,7 @@
 name: kuiper-snap
 base: core18
 type: app
-version: "0.4.2"
+version: "0.9.1"
 summary: kuiper
 description: |
   kuiper test snap
@@ -20,15 +20,15 @@ apps:
     environment:
       KuiperBaseKey: $SNAP_DATA/kuiper
 
-      # 0.4.2 env vars
-      KUIPER_CONSOLE_LOG: "true"
-      KUIPER_REST_PORT: 48075
-      KUIPER_RESTPORT: 48075
-      EDGEX_SERVER: localhost
-      EDGEX_SERVICE_SERVER: http://localhost:48080
-      EDGEX_TOPIC: events
-      EDGEX_PROTOCOL: tcp
-      EDGEX_PORT: 5566
+      # NOTE: the environment variables were taken from
+      # https://github.com/edgexfoundry/developer-scripts/blob/master/releases/nightly-build/compose-files/docker-compose-nexus.ymls
+      EDGEX__DEFAULT__PORT: 5566
+      EDGEX__DEFAULT__PROTOCOL: tcp
+      EDGEX__DEFAULT__SERVER: localhost
+      EDGEX__DEFAULT__SERVICESERVER: http://localhost:48080
+      EDGEX__DEFAULT__TOPIC: events
+      KUIPER__BASIC__CONSOLELOG: "true"
+      KUIPER__BASIC__RESTPORT: 48075
 
     plugs: [network, network-bind, snapd-control]
   kuiper-cli:
